<resources>
    <string name="app_name">Tip &amp; Split</string>

    <string name="enter_amount">Enter Amount</string>
    <string name="tip">Tip</string>
    <string name="split">Split</string>
    <string name="total">Total With Tip</string>
    <string name="per_perosn">Total Per Person</string>
    <string name="clear">Clear</string>
    <string name="share">Share</string>
    <string name="breakdown">Breakdown</string>
    <string name="bill">Bill</string>
    <string name="ok">OK</string>
</resources>